# mwrpy_sim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  _typos.toml  pyproject.toml
.github/workflows/: test.yml
mwrpy_sim/: atmos.py  cli.py  process_mwrpy_sim.py  sim_mwr.py  utils.py  version.py
mwrpy_sim/data_tools/: cloud_mod.py  prepare_input.py  stability_indices.py
mwrpy_sim/data_tools/config_vaisala/: level1.yaml  level2.yaml
mwrpy_sim/data_tools/era5_download/: get_era5.py
mwrpy_sim/plot/: plot_meta.py  plotting.py
mwrpy_sim/rad_trans/: __init__.py  calc_absorption.py  irt_srf.json  rad_trans_ir.py  rad_trans_meta.py  rad_trans_mw.py  run_rad_trans.py  run_rad_trans_day.py
mwrpy_sim/rad_trans/coeff/: irt_srf.json  solar.kurucz.rad.1cm-1binned.full_disk.asc
mwrpy_sim/site_config/: config.yaml  juelich.yaml  lindenberg.yaml  standard_atmosphere.yaml
