[project]
name = "mwrpy_sim"
description = "Repository for Simulating Microwave Radiometer Brightness Temperatures"
authors = [{name = "Tobias Marke", email = "tobias.marke@uni-koeln.de"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "cdsapi",
  "matplotlib",
  "metpy",
  "netCDF4",
  "numpy",
  "pandas",
  "pysonde",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["mypy", "pytest", "pytest-flakefinder", "ruff", "types-PyYAML", "types-pytz"]
dev = ["pre-commit", "release-version"]

[project.scripts]
mwrpy_sim = "mwrpy_sim.cli:main"

[project.urls]
Homepage = "https://github.com/tobiasmarke/mwrpy_sim"
Repository = "https://github.com/tobiasmarke/mwrpy_sim"
Changelog = "https://github.com/tobiasmarke/mwrpy_sim/blob/main/CHANGELOG.md"

[tool.mypy]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["cdsapi.*", "matplotlib.*", "metpy.*", "netCDF4.*", "numpy.*", "pandas.*", "pysonde.*"]
ignore_missing_imports = true

[tool.release-version]
filename = "pyproject.toml"
pattern = "version = \"(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)\""
changelog = "CHANGELOG.md" # optional

[tool.ruff.lint]
select = ["D", "I"]
ignore = [
  "D100", # allow missing documentation
  "D101", # allow missing documentation
  "D102", # allow missing documentation
  "D103", # allow missing documentation
  "D104", # allow missing documentation
  "D105", # allow missing documentation
  "D106", # allow missing documentation
  "D107", # allow missing documentation
  "D205", # allow long multi-line summary
  "D211", # conflicting documentation rule
  "D213", # conflicting documentation rule
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.dynamic]
version = {attr = "mwrpy_sim.version.__version__"}

[tool.tomlsort]
trailing_comma_inline_array = true
sort_inline_arrays = true
